# settings-py

./: .gitmodules  README.md
templates/django/: pyproject.toml  python.mk
templates/fastapi/: pyproject.toml  python.mk
